--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="#"><h1 style="font-family: 'Courier10 BT'">Find Your Git <i style="vertical-align: bottom;font-size: 40px" class="fa fa-github" aria-hidden="true"></i></h1></a>
+  <nav class="navbar navbar-expand-md bg-info ">
+    <a class="navbar-brand" href="#" style="text-decoration:none;color:white" ><h1 style="font-family: 'Courier10 BT'">Find Your Git <i style="vertical-align: bottom;font-size: 40px" class="fa fa-github" aria-hidden="true"></i></h1></a>
   </nav>
 <div class="main">
   <div class="row">
 
     <div class="searchContainer col-sm-3">
       <h1 style="color: black;font-size: 50px;font-weight: bolder;font-family: 'Trebuchet MS'">
-      Username
+      Welcome To Github Finder
       </h1>
+	  <p class="mb-0" style="font-size:20px">Username</p>
       <input type="text" id="searchUser" class="form-control" placeholder="Github Username...">
     </div>
     <br>
@@ -32,16 +33,16 @@
   </div>
 
 </div>
-<div class="bg-dark p-5 text-white d-flex justify-content-between">
+<div class="bg-info pl-3 pb-3 ptr-3 pt-1 text-white d-flex justify-content-between">
   <div>
     
-      <span><a href="https://github.com/manavsingh27" target="_blank" style="text-white"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-github" aria-hidden="true"></i></a></span>
+      <span><a href="https://github.com/manavsingh27" target="_blank" style="text-decoration:none;color:white"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-github" aria-hidden="true"></i></a></span>
   </div>
   <div>
-    <span><a href="https://www.instagram.com/manavsambyal/" target="_blank"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-instagram"></i></a></span>
+    <span><a href="https://www.instagram.com/manavsambyal/" target="_blank" style="text-decoration:none;color:white"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-instagram"></i></a></span>
   </div>
   <div>
-     <span><a href="https://www.linkedin.com/in/manav-sambyal-347892192/" target="_blank"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-linkedin"></i></a></span>
+     <span><a href="https://www.linkedin.com/in/manav-sambyal-347892192/" target="_blank" style="text-decoration:none;color:white"><i style="vertical-align: bottom;font-size: 40px" class="fa fa-linkedin"></i></a></span>
   </div>
 </div>
   <!-- /.container -->
